# projetcpp2a33-smart-optical-store

./: .gitignore  CMakeLists.txt  FOURNISSEUR_INTEGRATION_GUIDE.md  README.md  connection.cpp  connexion.cpp  connexion.h  desktop.ini  employe.cpp  employe.h  fournisseur.cpp  fournisseur.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h  projetqt.pro  resoources.qrc  saliare.cpp  saliare.h  setup_fournisseur_table.sql
crud/: employe finale.ui  mainwindow.cpp  mainwindow.h
gestion_stock/: CMakeLists.txt  connexion.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h  resoources.qrc
integ_crud_stock_empl/: CMakeLists.txt  connexion.cpp  employe.cpp  employe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h
travail_integre/: CMakeLists.txt.user.836946e  mainwindow.cpp  mainwindow.h  mainwindow.ui  resoources.qrc
